# ChangeLog for net-misc/xf4vnc
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/xf4vnc/ChangeLog,v 1.6 2006/07/23 15:24:29 genstef Exp $

*xf4vnc-4.3.0.999 (23 Jul 2006)

  23 Jul 2006; Stefan Schweizer <genstef@gentoo.org> metadata.xml,
  +xf4vnc-4.3.0.999.ebuild:
  New ebuild to fix bugs 64147, 106724 and 139244

  15 Jul 2006; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove aliz from metadata.xml as he's retired.

  13 Jun 2004; Donnie Berkholz <spyderous@gentoo.org>;
  xf4vnc-4.3.0.103.ebuild, xf4vnc-4.3.0.104.ebuild:
  Change x11-base/xfree dependency to virtual/x11 (#52153).

  28 Apr 2004; Daniel Ahlberg <aliz@gentoo.org> xf4vnc-4.3.0.103.ebuild,
  xf4vnc-4.3.0.104.ebuild:
  Fixed KEYWORDS, mark stable on x86.

*xf4vnc-4.3.0.104 (29 Mar 2004)
*xf4vnc-4.3.0.103 (29 Mar 2004)

  29 Mar 2004; Daniel Ahlberg <aliz@gentoo.org> xf4vnc-4.3.0.103.ebuild, 
  xf4vnc-4.3.0.104.ebuild:
  Initial import. Ebuild submitted by Joel Martin <kanaka@gentoo.org> in #45733.
