@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/xf4vnc/xf4vnc-4.3.0.104.ebuild,v 1.4 2004/06/25 00:20:51 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/xf4vnc/xf4vnc-4.3.0.104.ebuild,v 1.5 2006/08/28 17:24:24 mr_bones_ Exp $
 
 DESCRIPTION="VNC (remote desktop viewer) derived from tightvnc but cooler :-)"
 HOMEPAGE="http://xf4vnc.sourceforge.net/"
@@ -18,7 +18,17 @@ SLOT="0"
 KEYWORDS="x86 -*"
 IUSE=""
 
-DEPEND="virtual/x11"
+DEPEND="
+	|| ( ( x11-libs/libICE
+		x11-libs/libSM
+		x11-libs/libX11
+		x11-libs/libXaw
+		x11-libs/libXext
+		x11-libs/libXmu
+		x11-libs/libXpm
+		x11-libs/libXt )
+	virtual/x11 )"
+
 
 src_install() {
 	insinto /usr/X11R6/lib/modules/
